<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorPickerActivity">

    <TextView
        android:id="@+id/colorPicker_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/colorPicker_headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorPicker_rgb_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/colorPicker_rgb_textView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageView
        android:id="@+id/colorPicker_rgbPreview_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPicker_rgb_textView"
        app:srcCompat="@android:color/transparent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="352dp"
        android:layout_height="197dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPicker_headline">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/canvas_red_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:text="@string/canvas_red_textView"
                android:textAlignment="center"
                android:textColor="@color/color_red"
                app:layout_constraintEnd_toEndOf="@+id/tableLayout"
                app:layout_constraintTop_toTopOf="@+id/tableLayout" />

            <TextView
                android:id="@+id/canvas_green_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/canvas_green_textView"
                android:textAlignment="center"
                android:textColor="@color/color_green"
                app:layout_constraintEnd_toStartOf="@+id/canvas_red_textView"
                app:layout_constraintStart_toEndOf="@+id/canvas_blue_textView"
                app:layout_constraintTop_toTopOf="@+id/tableLayout" />

            <TextView
                android:id="@+id/canvas_blue_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/canvas_BLUE_textView"
                android:textAlignment="center"
                android:textColor="@color/color_blue"
                app:layout_constraintStart_toStartOf="@+id/tableLayout"
                app:layout_constraintTop_toTopOf="@+id/canvas_green_textView" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/colorPicker_red_numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp" />

            <NumberPicker
                android:id="@+id/colorPicker_green_numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp" />

            <NumberPicker
                android:id="@+id/colorPicker_blue_numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>